Theme: Fix cancel button alignment

--- a/docroot/sites/all/themes/opensource/sass/partials/polls/_polls-base.scss
+++ b/docroot/sites/all/themes/opensource/sass/partials/polls/_polls-base.scss
@@ -19,7 +19,7 @@
         clear: left;
     }
 
-    .poll-cancel-form {
+    #poll-cancel-form {
         float: right;
     }
 }
